--- a/index.html
+++ b/index.html
@@ -2193,6 +2193,34 @@
 </tr>
 
 <tr>
+	<td>WEI 074</td>
+	<td class="wei">魏</td>
+	<th>文　鸯</th>
+	<td>万将披靡</td>
+	<td>5</td>
+	<td class='jineng'>
+		<strong>膂力</strong>——每回合限一次，当你造成伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
+		<strong>仇决</strong>——觉醒技，每个回合结束时，若你的手牌数和体力值相差3或更多，你减1点体力上限并获得技能“背水”，然后“膂力”改为“在自己的回合时每回合限两次”。<br/>
+		<span class="getskill">修改1·膂力</span>——每回合限一次（在自己的回合时每回合限两次），当你造成伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
+		<span class="getskill">背水</span>——觉醒技，准备阶段，若你的手牌数或体力值小于2，你减1点体力上限并获得技能“清剿”，然后“膂力”改为受到伤害后也可发动。<br/>
+		<span class="getskill">修改2·膂力</span>——每回合限一次（在自己的回合时每回合限两次），当你造成或受到伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
+		<span class="getskill">清剿</span>——出牌阶段开始时，你可以弃置所有手牌，然后从牌堆或弃牌堆中随机获得八张牌名各不相同且副类别不同的牌。若如此做，结束阶段，你弃置所有牌。</td>
+	<th class='xianding'>限定</th>
+</tr>
+
+<tr>
+	<td>WEI 075</td>
+	<td class="wei">魏</td>
+	<th>蒋　干</th>
+	<td>江淮之器</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>盗书</strong>——出牌阶段限一次，你可以选择一名角色并选择一种花色，然后获得该角色一张手牌。若此牌与你选择的花色相同，你对其造成1点伤害且此技能视为未发动过；若花色不同，则你交给该角色一张其他花色的手牌（若没有需展示所有手牌）。<br />
+		<strong>伪诚</strong>——你交给其他角色手牌，或你的手牌被其他角色获得后，若你的手牌数小于当前体力值，则你摸一张牌。</td>
+	<th class='xianding'>限定</th>
+</tr>
+
+<tr>
 	<td>WEI ???</td>
 	<td class="wei">魏</td>
 	<th>唐　咨</th>
@@ -2202,6 +2230,18 @@
 		<strong>兴棹</strong>——锁定技，场上受伤的角色为1个以上，你拥有技能“恂恂”；2个或以上，你使用装备牌时摸一张牌；3个或以上，你跳过弃牌阶段。<br />
 		<span class="getskill">恂恂</span>——摸牌阶段开始时，你可以观看牌堆顶的四张牌，然后将其中的两张牌置于牌堆顶，将其余的牌置于牌堆底。</td>
 	<th class='sp'>SP</th>
+</tr>
+
+<tr>
+	<td>WEI ???</td>
+	<td class="wei">魏</td>
+	<th>张昌蒲</th>
+	<td>矜严明训</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>严教</strong>——出牌阶段限一次，你可以选择一名其他角色。从牌堆顶亮出四张牌，该角色将这些牌分成点数之和相等的两组，你与其各获得其中一组，然后将剩余未分组的牌置入弃牌堆。若未分组的牌超过一张，你本回合手牌上限-1。<br />
+		<strong>省身</strong>——当你受到伤害后，你可以摸一张牌且下一次发动“严教”亮出的牌数+1。若你的手牌数为全场最少，则改为摸两张牌；若你的体力值为全场最少，则“严教”亮出的牌数改为+2（加值总数不能超过4）。</td>
+	<th class='xianding'>自走棋</th>
 </tr>
 
 <tr>
@@ -2233,46 +2273,6 @@
 <tr>
 	<td>WEI ???</td>
 	<td class="wei">魏</td>
-	<th>张昌蒲</th>
-	<td>矜严明训</td>
-	<td>3</td>
-	<td class='jineng'>
-		<strong>严教</strong>——出牌阶段限一次，你可以选择一名其他角色。从牌堆顶亮出四张牌，该角色将这些牌分成点数之和相等的两组，你与其各获得其中一组，然后将剩余未分组的牌置入弃牌堆。若未分组的牌超过一张，你本回合手牌上限-1。<br />
-		<strong>省身</strong>——当你受到伤害后，你可以摸一张牌且下一次发动“严教”亮出的牌数+1。若你的手牌数为全场最少，则改为摸两张牌；若你的体力值为全场最少，则“严教”亮出的牌数改为+2（加值总数不能超过4）。</td>
-	<th class='xianding'>自走棋</th>
-</tr>
-
-<tr>
-	<td>WEI ???</td>
-	<td class="wei">魏</td>
-	<th>蒋　干</th>
-	<td>江淮之器</td>
-	<td>3</td>
-	<td class='jineng'>
-		<strong>盗书</strong>——出牌阶段限一次，你可以选择一名角色并选择一种花色，然后获得该角色一张手牌。若此牌与你选择的花色相同，你对其造成1点伤害且此技能视为未发动过；若花色不同，则你交给该角色一张其他花色的手牌（若没有需展示所有手牌）。<br />
-		<strong>伪诚</strong>——你交给其他角色手牌，或你的手牌被其他角色获得后，若你的手牌数小于当前体力值，则你摸一张牌。</td>
-	<th class='xianding'>限定</th>
-</tr>
-
-<tr>
-	<td>WEI ???</td>
-	<td class="wei">魏</td>
-	<th>文　鸯</th>
-	<td>万将披靡</td>
-	<td>5</td>
-	<td class='jineng'>
-		<strong>膂力</strong>——每回合限一次，当你造成伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
-		<strong>仇决</strong>——觉醒技，每个回合结束时，若你的手牌数和体力值相差3或更多，你减1点体力上限并获得技能“背水”，然后“膂力”改为“在自己的回合时每回合限两次”。<br/>
-		<span class="getskill">修改1·膂力</span>——每回合限一次（在自己的回合时每回合限两次），当你造成伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
-		<span class="getskill">背水</span>——觉醒技，准备阶段，若你的手牌数或体力值小于2，你减1点体力上限并获得技能“清剿”，然后“膂力”改为受到伤害后也可发动。<br/>
-		<span class="getskill">修改2·膂力</span>——每回合限一次（在自己的回合时每回合限两次），当你造成或受到伤害后，你可以将手牌摸至与体力值相同或将体力回复至与手牌数相同。<br/>
-		<span class="getskill">清剿</span>——出牌阶段开始时，你可以弃置所有手牌，然后从牌堆或弃牌堆中随机获得八张牌名各不相同且副类别不同的牌。若如此做，结束阶段，你弃置所有牌。</td>
-	<th class='xianding'>限定</th>
-</tr>
-
-<tr>
-	<td>WEI ???</td>
-	<td class="wei">魏</td>
 	<th>辛　毗</th>
 	<td>一节肃六军</td>
 	<td>3</td>
@@ -2285,8 +2285,20 @@
 <tr>
 	<td>WEI ???</td>
 	<td class="wei">魏</td>
+	<th>贾　逵</th>
+	<td>肃齐万里</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>忠佐</strong>——一名角色的回合结束时，若你在此回合内造成过或受到过伤害，则你可令一名角色摸两张牌。若你选择的角色已受伤，则你摸一张牌。<br/>
+		<strong>挽澜</strong>——限定技，一名角色进入濒死状态时，你可弃置所有手牌令该角色回复体力至1点，然后你对当前回合角色造成1点伤害。 </td>
+	<th class='xianding'>祈福</th>
+</tr>
+
+<tr>
+	<td>WEI ???</td>
+	<td class="wei">魏</td>
 	<th>王　双</th>
-	<td>遏北的悍锋 </td>
+	<td>遏北的悍锋</td>
 	<td>8</td>
 	<td class='jineng'>
 		<strong>持节</strong>——锁定技，你的【杀】无距离限制；当你使用【杀】指定攻击范围外的角色为目标后，此【杀】不计次数且你进行判定：若结果为武器或坐骑牌，此【杀】伤害值增加至其体力值；若为其他结果，你失去1点体力。</td>
@@ -3346,18 +3358,6 @@
 <tr>
 	<td>SHU ???</td>
 	<td class="shu">蜀</td>
-	<th>张　温</th>
-	<td>冲天孤鹭</td>
-	<td>3</td>
-	<td class='jineng'>
-		<strong>颂蜀</strong>——出牌阶段限一次，你可以与一名其他角色拼点，若你没赢，该角色摸2张牌；若你赢，本回合内此技能视为未发动过。<br />
-		<strong>思辩</strong>——摸牌阶段，你可以放弃摸牌，改为亮出牌堆顶的四张牌，然后获得其中所有点数最大与点数最小的牌。若获得的牌是两张且点数之差小于存活人数，则你可以将剩余的牌交给手牌数最少的角色。</td>
-	<th class='xianding'>上兵伐谋</th>
-</tr>
-
-<tr>
-	<td>SHU ???</td>
-	<td class="shu">蜀</td>
 	<th>胡金定</th>
 	<td>怀子求怜</td>
 	<td>2/6</td>
@@ -3393,6 +3393,41 @@
 		<strong>战缘</strong>——觉醒技，准备阶段，若你已因“蛮嗣”累计获得超过七张牌，你加1点体力上限，并可以选择一名男性角色，你与其获得技能“系力”，然后你失去技能“蛮嗣”。<br />
 		<span class="getskill">系力</span>——你的回合外，当其他拥有【系力】技能的角色在其回合内使用【杀】指定目标后，你可以弃置一张手牌，令此【杀】伤害+1。</td>
 	<th class='xianding'>祈福</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>张　翼</th>
+	<td></td>
+	<td>4</td>
+	<td class='jineng'>
+		<strong>执义</strong>——锁定技，当你于一回合第一次使用或打出基本牌后，你选择一项：1.于当前进行结算的牌结算结束后，视为你使用该基本牌（无次数限制）2.摸一张牌。</td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>杨　仪</th>
+	<td></td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>度断</strong>——每回合限一次，当你成为杀的使用目标后，你可以重铸一张牌。然后你令此杀的使用者选择一项：1，摸两张牌然后此杀无效；2，弃一张牌然后此杀不可被响应。<br/>
+		<strong>共损</strong>——出牌阶段开始时，你可以弃置两张牌，选择一名其他角色并指定一个基本牌或普通锦囊牌的牌名，直至你的下个回合开始前或你死亡时，你与其均无法使用，打出或弃置该牌名的牌。</td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="shu">蜀</td>
+	<th>邓　芝</th>
+	<td></td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>急盟</strong>——出牌阶段开始时，你可以获得一名其他角色一张牌，然后交给该角色x张牌（x为你当前体力值）。<br/>
+		<strong>率言</strong>——弃牌阶段开始时，若你的手牌数大于1，则你可以展示所有手牌，然后你令其他一名角色交给你一张牌。</td>
+	<th class='yidongban'>移动版</th>
 </tr>
 
 <tr>
@@ -4402,6 +4437,30 @@
 		<strong>表召</strong>——结束阶段，你可以将一张牌置于武将牌上，称为“表”。当有一张与“表”花色点数均相同的牌进入弃牌堆时，移去“表”且你失去1点体力，若此牌是其他角色因弃置而进入弃牌堆的，则改为该角色获得“表”。准备阶段，若你的武将牌上有“表”，则移去“表”然后你选择一名角色，该角色回复1点体力且将手牌摸至与全场手牌数最多的人相同（最多摸五张）。<br/>
 		<strong>业仇</strong>——你死亡时，可以选择一名已损失体力值大于1的角色。每个回合结束时，该角色失去1点体力直到其回合开始。</td>
 	<th class='xianding'>自走棋</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="wu">吴</td>
+	<th>张　温</th>
+	<td>冲天孤鹭</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>颂蜀</strong>——出牌阶段限一次，你可以与一名其他角色拼点，若你没赢，该角色摸2张牌；若你赢，本回合内此技能视为未发动过。<br />
+		<strong>思辩</strong>——摸牌阶段，你可以放弃摸牌，改为亮出牌堆顶的四张牌，然后获得其中所有点数最大与点数最小的牌。若获得的牌是两张且点数之差小于存活人数，则你可以将剩余的牌交给手牌数最少的角色。</td>
+	<th class='xianding'>上兵伐谋</th>
+</tr>
+
+<tr>
+	<td>SHU ???</td>
+	<td class="wu">吴</td>
+	<th>孙　邵</th>
+	<td>廊庙才</td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>弼政</strong>——摸牌阶段结束时，你可令一名其他角色摸两张牌，然后你与其之中，手牌数大于体力值的角色弃置两张牌。<br />
+		<strong>佚典</strong>——若你使用的基本牌或普通锦囊牌在弃牌堆中没有同名牌，你可以为此牌指定一个额外目标（无视距离）。</td>
+	<th class='yidongban'>移动版</th>
 </tr>
 
 <tr>
@@ -5535,18 +5594,6 @@
 <tr>
 	<td>QUN ???</td>
 	<td class="qun">群</td>
-	<th>审　配</th>
-	<td></td>
-	<td>3</td>
-	<td class='jineng'>
-		<strong>守邺</strong>——每回合限一次，当你成为其他角色使用牌的唯一目标后，你可以与其进行对策；若你对策成功，则此牌对你无效，且此牌进入弃牌堆时改为由你获得。<br/>
-		<strong>烈直</strong>——准备阶段，你可选择至多两名其他角色，依次弃置其区域内的一张牌；若你受到过伤害，则直至你的下个结束阶段时，此技能无效。</td>
-	<th class='yidongban'>移动版</th>
-</tr>
-
-<tr>
-	<td>QUN ???</td>
-	<td class="qun">群</td>
 	<th>李　肃</th>
 	<td>魔使</td>
 	<td>2</td>
@@ -5560,7 +5607,7 @@
 	<td>QUN ???</td>
 	<td class="qun">群</td>
 	<th>袁谭&袁尚</th>
-	<td></td>
+	<td>兄弟阋墙</td>
 	<td>4</td>
 	<td class='jineng'>
 		<strong>内伐</strong>——出牌阶段开始时，你可以摸两张牌或获得场上的一张牌，然后弃置一张牌。若弃置的牌是基本牌，本回合你不能使用锦囊牌和装备牌且【杀】的使用次数+X且目标+1；若弃置的牌不是基本牌，本回合你不能使用基本牌，使用的普通锦囊牌的目标+1或-1，本回合前两次使用装备牌时摸X张牌。（X为发动内伐时手牌中不能使用的牌且最多为5）</td>
@@ -5595,8 +5642,30 @@
 <tr>
 	<td>QUN ???</td>
 	<td class="qun">群</td>
-	<th>荀　谌</th>
+	<th>董　承</th>
 	<td></td>
+	<td>4</td>
+	<td class='jineng'>
+		<strong>承诏</strong>——一名角色的结束阶段，若你于此回合获得过至少两张牌，则你可以与一名角色拼点。若你赢，则视为你对其使用一张无视防具的【杀】。 </td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>郑　玄</th>
+	<td></td>
+	<td>3</td>
+	<td class='jineng'>
+		<strong>整经</strong>——出牌阶段限一次，你可以整理一次经典，并将你整理出的牌置于一名角色的武将牌上，称为“经”，武将牌上有“经”的角色的准备阶段，其获得此“经”然后跳过本回合的判定和摸牌阶段。</td>
+	<th class='yidongban'>移动版</th>
+</tr>
+
+<tr>
+	<td>QUN ???</td>
+	<td class="qun">群</td>
+	<th>荀　谌</th>
+	<td>单锋谋孤城</td>
 	<td>3</td>
 	<td class='jineng'>
 		<strong>锋略</strong>——出牌阶段开始时，你可以与一名角色拼点，若你赢，该角色将其区域内的各一张牌交给你；若你没赢，你交给其一张牌。拼点结算后你可以令其获得你拼点的牌。<br />
@@ -5608,7 +5677,7 @@
 	<td>QUN ???</td>
 	<td class="qun">群</td>
 	<th>审　配</th>
-	<td></td>
+	<td>名门的死臣</td>
 	<td>3</td>
 	<td class='jineng'>
 		<strong>刚直</strong>——锁定技，其他角色对你造成的伤害，和你对其他角色造成的伤害均视为体力流失。<br />
@@ -5620,7 +5689,7 @@
 	<td>QUN ???</td>
 	<td class="qun">群</td>
 	<th>高　览</th>
-	<td></td>
+	<td>名门的峦柱</td>
 	<td>4</td>
 	<td class='jineng'>
 		<strong>袭营</strong>——出牌阶段开始时，你可以弃置一张非基本手牌并令所有其他角色选择一项：弃置一张牌；本回合内不能使用或打出牌。</td>
