--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cmn-hans">
 <head>
 <meta charset="utf-8" />
-<title>三国杀卡牌</title>
+<title>三国杀武将列表</title>
 <link rel="shortcut icon" href="../pic/favicon.ico" />
 <style>
 	.ex			{background-color: hsl( 55,90%,60%);}
