--- a/index.html
+++ b/index.html
@@ -2627,7 +2627,7 @@
 		<strong>享乐</strong>——锁定技，当你成为一名角色使用【杀】的目标后，除非该角色弃置一张基本牌，否则此【杀】对你无效。<br />
 		<strong>放权</strong>——你可以跳过出牌阶段，然后弃牌阶段开始时，你可以弃置一张手牌并令一名其他角色获得一个额外的回合。 <br />
 		<strong>若愚</strong>——主公技，觉醒技，准备阶段，若你是体力值最小的角色，你加1点体力上限，回复1点体力，然后获得“激将”和“思蜀”。<br />
-		<span class="getskill">激将</span>——主公技，其他蜀势力角色可以在你需要时代替你使用或打出【杀】。</td>
+		<span class="getskill">激将</span>——主公技，其他蜀势力角色可以在你需要时代替你使用或打出【杀】。<br />
 		<span class="getskill">思蜀</span>——出牌阶段开始时，你可以指定一名角色，令其本局游戏中【乐不思蜀】判定效果反转。</td>
 	<th class="jiexiantupo">界限突破</th>
 </tr>
